# whale-simulator

./: .gitignore  Cargo.toml  README.md
src/: entity.rs  game.rs  main.rs
