# Whale Simulator (C) 2022 Sadie Powell <sadie@witchery.services>
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "whalesim"
version = "0.1.1"
edition = "2021"

description = "A a terminal game written in Rust where you are a whale and you have to avoid pesky fishing boats whilst snacking on delicious krill."
documentation = "https://docs.rs/whalesim/"
homepage = "https://github.com/SadieCat/whale-simulator/"
license = "AGPL-3.0-or-later"
repository = "https://github.com/SadieCat/whale-simulator/"

[dependencies]
clap = { version = "3.0.7", features = [ "derive" ] }
rand = "0.8.4"
termion = "1.5.6"
